# malca

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  TODO.md  environment.yml  filtered_events.py  notes.txt  pyproject.toml  requirements.txt  todo-clean.txt  todo.txt
calder/: __init__.py  build_manifest.py  df_filter.py  df_filter_naive.py  df_plot.py  df_postprocess.py  df_process_naive.py  df_utils.py  dips.py  lc_baseline.py  lc_dips.py  lc_excursions.py  lc_excursions_bayes.py  lc_excursions_naive.py  lc_manifest.py  lc_metrics.py  lc_peaks.py  lc_stats.py  lc_utils.py  plot_bayes_results.py  plot_skypatrol_peaks.py  process_lc.py  reproduce_candidates.py  results.csv  robust_baseline.py  script.py  script2.py  script_filter_naive.py  script_process_dfs_naive.py  script_reproduce_candidates.py  script_search_naive.py  stats.py  test.ipynb  test.py  test_results.csv  test_skypatrol.py  utils.py  vsx_crossmatch.py
diagnostics/: README.md  analyze_phase1.py  analyze_phase2.py  phase1_deep_short.sh  phase1_shallow_dips.sh  phase1_short_duration.sh  phase2_optimized.sh  run_all_phase1.sh
dip/: catalog_matching.py  dipper_processing.py  false_positives.py  known_dipper_plotting.py  more_utils.py  scan_dippers.py  script.py
docs/: ARCHITECTURE.md  NOTES.md  PRE_FILTER_UPDATES.md  TODO.md  architecture.md
input/: Tzanidakis+2025.sty
ltv/: 3wise.py  LTV.py  LTvar.py  LTvar_meds.py  LTvar_single.py  dust.py  periodicity3-2.py  single_period.py  tutorial.txt
malca/: __main__.py  baseline.py  bayes_output_analysis.ipynb  characterize.py  classify.py  detect.py  detection_rate.py  dipper_score.py  events.ipynb  events.py  events_filtered.py  events_profiling.ipynb  filter.py  filter_attrition.py  filtered_events.py  fp_analysis.py  injection.py  injection_recovery.py  ltv.py  manifest.py  plot.py  plot_candidates.py  plot_metrics.py  plot_results_bayes.py  post_filter.py  postprocess.py  pre_filter.py  reproduce_candidates.py  reproduction.py  score.py  seasonal_trends.py  skypatrol_explore.py  stats.py  utils.py  vsx_crossmatch.py  vsx_filter.py  vsx_reproducibility.py
notebooks/: bayes_output_analysis.ipynb  eda.ipynb  events_profiling.ipynb  events_skypatrol.ipynb  skypatrol_events_analysis.ipynb
results_naive_sho/: peaks_12_12_5_20251225_214928-0500.csv  peaks_12_5_13_20251225_214928-0500.csv  peaks_13_13_5_20251225_214928-0500.csv  peaks_13_5_14_20251225_214928-0500.csv  peaks_14_14_5_20251225_214928-0500.csv  peaks_14_5_15_20251225_214928-0500.csv
scripts/: lc_manifest.py  manifest.py  plot_results.py  plot_results_bayes.py  reproduce_candidates.py
src/: baseline.py  df_utils.py  excursions_bayes.py  lc_utils.py
tests/: reproduction.py  test_baseline.py  test_events.py  validation.py  (+1 more)
(+100 files in other folders)
