[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "malca"
version = "0.1a0"
description = "MALCA: Multi-timescale ASAS-SN Light Curve Analysis"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Calder Lenhart" }]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "numba",
    "tqdm",
    "matplotlib",
    "astropy",
    "celerite2",
    "pyarrow",
]

[tool.setuptools.packages.find]
where = ["malca"]
include = ["*"]

[tool.setuptools]
package-dir = {"" = "malca"}
py-modules = [
    "baseline",
    "events",
    "filter",
    "plot",
    "stats",
    "utils",
]
