[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "malca"
version = "0.1a0"
description = "MALCA: Multi-timescale ASAS-SN Light Curve Analysis"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Calder Lenhart" }]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "numba",
    "tqdm",
    "matplotlib",
    "astropy",
    "celerite2",
    "pyarrow",
]

[project.optional-dependencies]
visualization = ["plotly"]
database = ["duckdb"]
multiwavelength = ["astroquery>=0.4.6", "dustmaps3d", "pyvo"]
notebooks = ["jupyterlab", "ipykernel", "seaborn", "scikit-learn", "joblib"]
dev = ["pytest", "pytest-cov", "pytest-xdist"]
all = ["plotly", "duckdb", "astroquery", "jupyterlab", "ipykernel", "seaborn", "scikit-learn", "joblib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["malca*"]

